@@ -1085,6 +1085,12 @@ div#userlogin form#userlogin2 h2 {
 	padding-top: 0;
 }
 
+div#userlogin .captcha {
+	border: 1px solid #bbb;
+	padding: 1.5em 2em;
+	width: 400px;
+	background-color: white;
+}
 
 
 #userloginprompt {
